# junction2023

./: .gitignore  Makefile  README.md
.github/workflows/: build-and-deploy-backend.yml  build-and-deploy-frontend.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml  setup.cfg
backend/src/: models.py  retriever.py  server.py
backend/src/llm/: chit_chat.py  extraction_chain.py  openai.py  severity_level.py  summarization_chain.py
backend/tests/: test_app.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  Authors.tsx  Core.tsx  Crew.tsx  Editor.tsx  HelperCat.tsx  RandomNumber.tsx  api.ts  index.tsx  reset.css
frontend/src/components/: Authors.tsx  Editor.tsx  HelperCat.tsx  RandomNumber.tsx
frontend/src/pages/: Authors.tsx  Home.tsx  Layout.tsx
frontend/src/theming/: ThemeProvider.tsx  theme.ts
terraform/: .terraform.lock.hcl  artifact-registry.tf  buckets.tf  cloud-run.tf  iam.tf  load-balancer.tf  main.tf  roles.tf  service-accounts.tf  terraform-backend.tf
