[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["pepsicools"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
numpy = "^1.26.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
aiohttp = "^3.8.6"
langchain = "^0.0.334"
openai = "^1.2.3"
tiktoken = "^0.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
pylint = "^2.17.4"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
unify = "^0.5"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
